# lightpcrtos

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
cmake/: toolchain-production.cmake  toolchain-test.cmake
docs/: BUILD.md
scripts/: build_embedded.sh  build_linux.sh  build_test.sh  run_tests.sh
src/: CMakeLists.txt  main.c  main_linux.c
src/business/: CMakeLists.txt  system_init.c  system_init.h
src/business/control/: motor_control.c  motor_control.h
src/business/sensor/: sensor_manager.c  sensor_manager.h
src/hal/: hal_dma.h  hal_memory.h  hal_scheduler.h  hal_timer.h  hal_types.h
test/: CMakeLists.txt  README.md
test/framework/: CMakeLists.txt
test/framework/include/: framework_timer.h
test/framework/src/: framework_timer.c
test/sim/: CMakeLists.txt
test/sim/include/: sim_memory.h  sim_timer.h
test/sim/src/: sim_dma.c  sim_memory.c  sim_scheduler.c  sim_timer.c
test/sim/tests/: CMakeLists.txt  test_sim_dma.cpp  test_sim_memory.cpp  test_sim_scheduler.cpp  test_sim_timer.cpp
test/testcases/: CMakeLists.txt
test/testcases/control/: CMakeLists.txt  test_motor_control.cpp
test/testcases/sensor/: CMakeLists.txt  test_sensor_manager.cpp
test/testcases/system/: CMakeLists.txt  test_system_init.cpp
